# DockTUI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  DockTUI.yaml  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  dockerview.yaml  pyproject.toml  release-please-config.json  start.sh
.github/: CODEOWNERS
.github/workflows/: docker-publish.yml  python-checks.yml  release.yml
DockTUI/: __init__.py  __main__.py  app.py  config.py
DockTUI/docker_mgmt/: manager.py
DockTUI/models/: __init__.py  log_line.py
DockTUI/services/: log_filter.py  log_formatter.py  log_parser.py  log_streamer.py
DockTUI/services/log/: __init__.py  json_formatter.py  xml_formatter.py
DockTUI/services/log/highlighter/: __init__.py  patterns.py  smart.py  themes.py
DockTUI/ui/: containers.py
DockTUI/ui/actions/: __init__.py  docker_actions.py  refresh_actions.py
DockTUI/ui/base/: container_list_base.py
DockTUI/ui/components/: __init__.py  footer_formatter.py  navigation_handler.py
DockTUI/ui/dialogs/confirm/: __init__.py  remove_container.py  remove_image.py  remove_unused_images.py  remove_unused_volumes.py  remove_volume.py
DockTUI/ui/managers/: image_manager.py  network_manager.py  stack_manager.py  volume_manager.py
DockTUI/ui/viewers/: __init__.py  log_filter_manager.py  log_pane.py  log_pane_styles.py  log_queue_processor.py  log_state_manager.py  log_stream_manager.py
DockTUI/ui/widgets/: __init__.py  headers.py  log_renderer.py  log_selection_manager.py  log_text_area.py  mouse_event_handler.py  parsing_coordinator.py  rich_log_viewer.py  status.py  virtual_scroll_manager.py
DockTUI/utils/: __init__.py  clipboard.py  formatting.py  logging.py  time_utils.py
DockTUI/utils/mixins/: __init__.py  cacheable.py
dockerview/: __init__.py  __main__.py  app.py  config.py
dockerview/docker/: manager.py
dockerview/docker_mgmt/: manager.py
dockerview/services/: log_filter.py  log_streamer.py
dockerview/ui/: container_list_base.py  containers.py  log_pane.py  network_manager.py  stack_manager.py  volume_manager.py
dockerview/ui/actions/: __init__.py  docker_actions.py  refresh_actions.py
dockerview/ui/base/: container_list_base.py
dockerview/ui/components/: __init__.py  footer_formatter.py  navigation_handler.py
dockerview/ui/dialogs/: confirm_modal.py  confirm_modal_base.py
dockerview/ui/dialogs/confirm/: __init__.py  compose_down.py
dockerview/ui/managers/: image_manager.py  network_manager.py  stack_manager.py  volume_manager.py
dockerview/ui/viewers/: log_pane.py
dockerview/ui/widgets/: __init__.py  headers.py  log_text_area.py  status.py
dockerview/utils/: __init__.py  clipboard.py  logging.py  text_processing.py
scripts-dev/: build-local.sh  start-local.sh
tests/: __init__.py  test_app.py  test_clipboard.py  test_config.py  test_log_filter.py  test_time_utils.py
tests/docker_mgmt/: test_manager.py
tests/services/: test_log_formatter.py  test_log_parser.py  test_log_streamer.py
tests/services/log/: __init__.py
tests/services/log/highlighter/: __init__.py  test_smart.py
tests/ui/: test_containers.py
tests/ui/actions/: __init__.py  test_docker_actions.py  test_refresh_actions.py  test_volume_actions.py
tests/ui/managers/: test_image_manager.py  test_stack_manager.py  test_volume_manager.py
tests/ui/viewers/: __init__.py  test_log_pane.py  test_log_stream_manager.py  test_log_text_area.py
tests/ui/widgets/: test_headers.py  test_log_selection_manager.py  test_mouse_event_handler.py  test_rich_log_viewer.py  test_virtual_scroll_manager.py
