[tool.poetry]
name = "dockerview"
version = "0.1.5"
description = "An interactive terminal dashboard for monitoring and managing Docker Compose environments"
authors = ["Chris Dial <dial.chris@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
textual = "^3.4.0"
docker = "^7.0.0"
pyperclip = "^1.9.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
autoflake = "^2.3.1"
poethepoet = "^0.24.4"
pre-commit = ">=2.9.2,<3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dockerview = "dockerview.app:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
remove-duplicate-keys = true
ignore-init-module-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["dockerview"]
omit = ["*/tests/*", "*/__init__.py", "*/__main__.py"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.poe.tasks]
format = [
    {cmd = "autoflake --remove-all-unused-imports --remove-unused-variables --in-place --recursive dockerview/"},
    {cmd = "isort dockerview/"},
    {cmd = "black dockerview/"}
]
lint = [
    {cmd = "autoflake --check --remove-all-unused-imports --remove-unused-variables --recursive dockerview/"},
    {cmd = "isort --check-only dockerview/"},
    {cmd = "black --check dockerview/"}
]
test = "pytest -v"
test-cov = "pytest -v --cov=dockerview --cov-report=term-missing --cov-report=html"
check = ["lint", "test"]
all = ["format", "test"]
